[gd_scene load_steps=5 format=3 uid="uid://0n5x6pgqfkte"]

[ext_resource type="Script" path="res://Scenes/GameObjects/SlidingWall/SlidingWall.gd" id="1_iddmd"]
[ext_resource type="Texture2D" uid="uid://cmsk56crr5ws7" path="res://Assets/Sprites/GothicWalls.png" id="2_ianyc"]
[ext_resource type="PackedScene" uid="uid://cyoi7r00qpkgd" path="res://Scenes/Components/Interactable/Interactable.tscn" id="3_o0yv1"]
[ext_resource type="PackedScene" uid="uid://dgxquc7773221" path="res://Scenes/Components/ToggleCollision/ToggleCollision.tscn" id="4_lm0tu"]

[node name="SlidingWall" type="Node2D"]
script = ExtResource("1_iddmd")
region = Vector2i(16, 16)
duration = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ianyc")
region_enabled = true
region_rect = Rect2(16, 16, 16, 16)

[node name="Interactable2D" parent="." instance=ExtResource("3_o0yv1")]

[node name="ToggleCollision" parent="." instance=ExtResource("4_lm0tu")]

[connection signal="interaction" from="Interactable2D" to="." method="_on_interactable_2d_interaction"]
